tolk-tester/tests/invalid-syntax/err-3650.tolk
struct A {
    v1 = 0,
}

/**
@compilation_should_fail
@stderr expected `: <type>`, got `=`
 */
